--- a/常见错误思维分析.html
+++ b/常见错误思维分析.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<h2 id="toc_0.1">常见错误思维分析(1)</h2>
+<h2 id="toc_0.1">常见错误思维分析</h2>
 
 <p>
-根据《NOTES:常见症状分析（一）》一文中，我们可以看到一个看待问题主观，无法接受不同的意见，思维能力低，情绪控制能力差的样子，那么她们常见的错误思维背后的因素是什么呢？本文尝试加以分析总结。
+根据<a href="常见症状分析.html">常见症状分析</a>一文中，我们可以看到一个看待问题主观，无法接受不同的意见，思维能力低，情绪控制能力差的样子，那么她们常见的错误思维背后的因素是什么呢？本文尝试加以分析总结。
 </p>
 
 <p>
@@ -21,7 +21,9 @@
 </p>
 
 
-
+<p>
+<a href="./images/C-02.png"><img src="./images/C-02.png" /></a>
+</p>
 
 
 <p>
@@ -36,7 +38,9 @@
  我们尝试比较两者的不同。发现前者是以理性为主要思维模式的，后者则是以情绪为主导解决问题的。由于思维模式的不同，其处理问题的方式也必然不同，导致的结果也不同。
 </p>
 
-
+<p>
+<a href="./images/C-01.png"><img src="./images/C-01.png" /></a>
+</p>
 
 
 <p>
