--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <a href="心理学参考手册.html">心理学参考手册</a>
 </li>
 <li>
+<a href="中医保健参考手册.html">中医保健参考手册</a>
+</li>
+<li>
 <a href="书单.html">书单</a>
 </li>
 </ol>
