--- a/名人名言.html
+++ b/名人名言.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>名人名言</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <script>var root_path = '';</script>
@@ -30,27 +30,9 @@
 </div>
 <div id="cse"></div>
 <div id="main">
-<h1 id="toc_1">TODO</h1>
-<div class="toc">
-<ul>
-<li><a href="#toc_1">TODO</a></li>
-</ul>
-</div>
-
-<ol>
-<li>
-<a href="东方闪电退教参考手册.html">东方闪电退教参考手册</a>
-</li>
-</ol>
-
-<ol>
-<li>
-<a href="refs.html">参考资料</a>
-</li>
-<li>
-<a href="名人名言.html">名人名言</a>
-</li>
-</ol>
+<blockquote>
+据我个人的看法，人一死就是涅架，不用你苦苦去追求。那种追求是"可怜无补费工夫"。在亿万年地球存在的期间，一个人只能有一次生命。这一次生命是万分难得的。我们每一个人都必须认识到这一点，切不可掉以轻心。盡管人的寿夭不同；这是人们自己无能为力的。不管寿长寿短，都要盡力实现这仅有的一次生命的价值。@季羡林
+</blockquote>
 </div>
 <div id="footer">
     <p>&copy; 2011 心灵家园（退教心理咨询） &nbsp;&nbsp;<script language="javascript" src="http://count9.51yes.com/click.aspx?id=95484600&logo=1" charset="gb2312"></script>
