--- a/index.html
+++ b/index.html
@@ -34,23 +34,60 @@
 <div class="toc">
 <ul>
 <li><a href="#toc_1">TODO</a></li>
+<ul>
+<li><a href="#toc_1.1">组织成员</a></li>
+<li><a href="#toc_1.2">成立组织的目的</a></li>
+<li><a href="#toc_1.3">组员守则</a></li>
+</ul>
 </ul>
 </div>
 
-<ol>
-<li>
+<ul>
+<li><input type="checkbox" />
 <a href="东方闪电退教参考手册.html">东方闪电退教参考手册</a>
 </li>
-</ol>
-
-<ol>
-<li>
+<li><input type="checkbox" />
+<a href="咨询服务须知.html">咨询服务须知</a>
+</li>
+<li><input type="checkbox" />
+<a href="义工服务须知.html">义工服务须知</a>
+</li>
+<li><input type="checkbox" />
 <a href="refs.html">参考资料</a>
 </li>
-<li>
+<li><input type="checkbox" />
 <a href="名人名言.html">名人名言</a>
 </li>
-</ol>
+</ul>
+
+<h2 id="toc_1.1">组织成员</h2>
+<table class='center'>
+<tr>
+<th>网名</th>
+<th>担任职务</th>
+<th>负责范围</th>
+<th>所在城市</th>
+<th>e-mail</th>
+</tr>
+<tr>
+<td>心灵之光</td>
+<td>创始人</td>
+<td>组织框架搭建，前期内容建设，团队组建等</td>
+<td>shanghai</td>
+<td>angelife.t@gmail.com;angelife.foxmail.com</td>
+</tr>
+</table>
+
+<h2 id="toc_1.2">成立组织的目的</h2>
+<p>
+成立组织的目的是为了建立一支能够在全国范围内协同作战的队伍，可以更有效的合作，将组织计划的任务一一落实。改变过去旧联盟一盘散沙、各自为政、要么哭哭闹闹、要么死气沉沉的面貌。对加入组织的人员做严格的甄别，以防别有用心、蓄意捣乱的人员混入组织，这些都是旧联盟存在的若干问题，面对的问题很严重，在没有外援的情况下，我们需要认真对待，保持警惕，能否解决问题主要还是靠我们每一个组员自身的素质。
+<h2 id="toc_1.3">组员守则</h2>
+</p>
+<ul>
+<li>
+加入组织的成员需要注意，要严格按照组织的要求，定时定量的完成所交代的具体任务。
+</li>
+</ul>
 </div>
 <div id="footer">
     <p>&copy; 2011 心灵家园（退教心理咨询） &nbsp;&nbsp;<script language="javascript" src="http://count9.51yes.com/click.aspx?id=95484600&logo=1" charset="gb2312"></script>
