--- a/名人名言.html
+++ b/名人名言.html
@@ -30,8 +30,106 @@
 </div>
 <div id="cse"></div>
 <div id="main">
+<h1 id="toc_1" class="justcenter">名人名言</h1>
+<div class="toc">
+<ul>
+<li><a href="#toc_1">名人名言</a></li>
+<ul>
+<li><a href="#toc_1.1">季羡林如是说</a></li>
+</ul>
+</ul>
+</div>
+
+<h2 id="toc_1.1">季羡林如是说</h2>
 <blockquote>
-据我个人的看法，人一死就是涅架，不用你苦苦去追求。那种追求是"可怜无补费工夫"。在亿万年地球存在的期间，一个人只能有一次生命。这一次生命是万分难得的。我们每一个人都必须认识到这一点，切不可掉以轻心。盡管人的寿夭不同；这是人们自己无能为力的。不管寿长寿短，都要盡力实现这仅有的一次生命的价值。@季羡林
+我有两句话：假话，全不说；真话，不全说。假话真话还能分别，就是不骗人。[1]
+</blockquote>
+<blockquote>
+据我个人的看法，人一死就是涅架，不用你苦苦去追求。那种追求是"可怜无补费工夫"。在亿万年地球存在的期间，一个人只能有一次生命。这一次生命是万分难得的。我们每一个人都必须认识到这一点，切不可掉以轻心。盡管人的寿夭不同；这是人们自己无能为力的。不管寿长寿短，都要盡力实现这仅有的一次生命的价值。多体会民胞物与的意义，使人类和动植物都能在仅有的一生中过得愉快，过得幸福，过得美满，过得祥和。[2]
+</blockquote>
+<blockquote>
+好多年来，我曾有过一个「良好」的愿望：我对每个人都好，也希望每个人都对我好。只望有誉，不能有毁。最近我恍然大悟，那是根本不可能的。[2]
+</blockquote>
+<blockquote>
+我们讲和谐，不仅要人与人和谐，人与自然和谐，还要人内心和谐。[3]
+</blockquote>
+<blockquote>
+要说真话，不讲假话。假话全不讲，真话不全讲。[4]
+</blockquote>
+<blockquote>
+我快一百岁了，活这麼久值得。因为盡管国家有这样那样不可避免的问题，但现在总的是人和政通、海晏河清。[4]
+</blockquote>
+<blockquote>
+我的家乡在山东。泰山的精神实际上就是中华民族的精神。[4]
+</blockquote>
+<blockquote>
+每个人都争取一个完满的人生。然而，自古及今，海内海外，一个百分之百完满的人生是没有的。所以我说，不完满才是人生。[5]
+</blockquote>
+<blockquote>
+根据我个人的观察，对世界上绝大多数人来说，人生一无意义，二无价值。[5]
+</blockquote>
+<blockquote>
+时间是亳不留情的，它真使人在自己制造的镜子里照见自己的真相! [5]
+</blockquote>
+<blockquote>
+对待一切善良的人，不管是家属，还是朋友，都应该有一个两字箴言：一曰真，二曰忍。真者，以真情实意相待，不允许弄虚作假；对待坏人，则另当别论。忍者，相互容忍也。[5]
+</blockquote>
+<blockquote>
+根据我的观察，坏人，同一切有毒的动植物一样，是并不知道自己是坏人的，是毒物的。我还发现，坏人是不会改好的。[5]
+</blockquote>
+<blockquote>
+好多年来，我曾有过一个「良好」的愿望：我对每个人都好，也希望每个人都对我好。只望有誉，不能有毁。最近我恍然大悟，那是根本不可能的。[5]
+</blockquote>
+<blockquote>
+学者们常说：「真理愈辩愈明。」我也曾长期虔诚地相信这一句话。但是，最近我忽然大彻大悟，觉得事情正好相反，真理是愈辩愈糊涂。 [5]
+</blockquote>
+<blockquote>
+歌颂我们的国家是爱国，对我们国家的不满也是爱国，这是我的看法。[5]
+</blockquote>
+<blockquote>
+我的工作主要是爬格子。几十年来，我已经爬出了上千万的字。这些东西都值得爬吗？我认为是值得的。我爬出的东西不见得都是精金粹玉，都是甘露醍醐，吃了能让人飞升成仙；但是其中绝没有毒藥，绝没有假冒伪劣，读了以后，至少能让人获得点享受，能让人爱国、爱乡、爱人类、爱自然、爱儿童，爱一切美好的东西。[5]
+</blockquote>
+<blockquote>
+任何一个人，包括我自己在内，以及任何一个生物，从本能上来看，总是趋吉避凶的。因此，我没怪罪任何人，包括打过我的人。我没有对任何人打击報復，并不是由于我度量特别大，能容天下难容之事，而是由于我洞明世事，又反求诸躬。假如我处在别人的地位上，我的行动不见得会比别人好。[5]
+</blockquote>
+<blockquote>
+我说过不少谎话，因为非此则不能生存。但是我还是敢于讲真话的，我的真话总是大大超过谎话。因此我是一个好人。 [5]
+</blockquote>
+<blockquote>
+现在，我的人生之旅快到终点了，我常常回忆80年来的历程，感慨万端。我曾问过自己一个问题，如果真有那麼一个造物主，要加恩于我，让我下一辈子还转生为人，我是不是还走今生走的这一条路？经过了一些思虑，我的回答是：还要走这一条路。但是有一个附带条件：让我的脸皮厚一点，让我的心黑一点，让我考虑自己的利益多一点，让我自知之明少一点。[5]
+</blockquote>
+<blockquote>
+我痛恨自己在政治上形同一条蠢驴，对所谓「无产阶级文化大革命」这一场残暴、混乱、使我们伟大的中华民族蒙羞忍耻、把我们国家的经济推向绝境、空前、绝后——这是我们的希望——，至今还没人能给一个全面合理的解释的悲剧，有不少人早就认识了它的实质，我却是在「四人帮」垮台以后脑筋才开了窍。我实在感到羞耻。 [5]
+</blockquote>
+<blockquote>
+我生平优点不多，但自谓爱国不敢后人，即使把我烧成了灰，每一粒灰也还是爱国的。可是我對於当知识分子这个行当却真有点谈虎色变。我从来不相信什麼轮回转生。现在，如果让我信一回的话，我就恭肃虔诚祷祝造化小儿，下一辈子无论如何也别播弄我，千万别再把我播弄成知识分子。[5]
+</blockquote>
+<blockquote>
+西方采取的是强硬的手段，要「征服自然」，而东方则主张採用和平友好的手段，也就是天人合一。要先与自然做朋友，然后再伸手向自然索取人类生存所需要的一切。宋代大哲学家张载说：「民，吾同胞，物，吾与也。」[5]
+</blockquote>
+<blockquote>
+人处在家庭和社会中，有时候恐怕需要讲点容忍的。Patience is the great virtue（容忍是很大的美德）。
+</blockquote>
+<blockquote>
+十年浩劫过去不到20年，人们已经快把它完全遗忘了。我恐惧，是因为我怕这些千载难得的经验一旦泯灭，以千万人遭受难言的苦难为代价而换来的经验教训，就难以发挥它的社会效应了。我还有一个牢固的信念。如果把这一场灾难的经过如实写出来，它将成为我们这个伟大民族的一面镜子。常在这面镜子前照一照，会有无限好处的。
+</blockquote>
+<blockquote>
+时光流失，一转眼，我已经到了望九之年，活得远远超过了自己的预算。有人说，长寿是福，我看也不盡然。人活得太久，对众生的相，看得透透彻彻，反而鼓舞时少，叹息时多。
+</blockquote>
+<blockquote>
+走运时，要想到倒霉，不要得意得过了头；倒霉时，要想到走运，不必垂头丧气。心态始终保持平衡，情绪始终保持稳定，此亦长寿之道。
+</blockquote>
+<blockquote>
+自己生存，也让别的动物生存，这就是善。只考虑自己生存不考虑别人生存，这就是恶。
+</blockquote>
+<blockquote>
+就是不一定把所有的话都说出来，但说出来的话一定是真话。
+</blockquote>
+<blockquote>
+你们的生命只有和民族的命运融合在一起才有价值，离开民族大业的个人追求，总是渺小的。
+</blockquote>
+<blockquote>
+做人要老实，学外语也要老实。学外语没有什麼万能的窍门。俗语说：书山有路勤为径，学海无涯苦作舟。」这就是窍门。
 </blockquote>
 </div>
 <div id="footer">
