--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 <li><input type="checkbox" />
 <a href="名人名言.html">名人名言</a>
 </li>
+<li><input type="checkbox" />
+<a href="参考书籍.html">参考书籍</a>
+</li>
 </ul>
-
 <h2 id="toc_1.1">组织成员</h2>
 <table class='center'>
 <tr>
