--- a/index.html
+++ b/index.html
@@ -16,13 +16,6 @@
                 <li>
 			<a href="refs.html">参考资料</a>
 		</li>
-                <!--<li>
-			<a href="aboutus.html">关于我们</a>
-		</li>
-                <li>
-                            <a href="task.html">任务</a>
-                            </li>-->
-
 		<li>
 			<a href="diary/diary.html">日记</a>
 		</li>
@@ -45,6 +38,9 @@
 <ul>
 <li><input type="checkbox" />
 <a href="东方闪电退教参考手册.html">东方闪电退教参考手册</a>
+</li>
+<li><input type="checkbox" />
+<a href="退教基本建议.html">退教基本建议</a>
 </li>
 <li><input type="checkbox" />
 <a href="咨询服务须知.html">咨询服务须知</a>
