--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
 <a href="东方闪电退教参考手册.html">东方闪电退教参考手册</a>
 </li>
 <li><input type="checkbox" />
-<a href="退教基本建议.html">退教基本建议</a>
-</li>
-<li><input type="checkbox" />
 <a href="咨询服务须知.html">咨询服务须知</a>
 </li>
 <li><input type="checkbox" />
@@ -58,7 +55,15 @@
 <a href="参考书籍.html">参考书籍</a>
 </li>
 </ul>
-<h2 id="toc_1.1">组织成员</h2>
+
+<h2 id="toc_1.1">退教基本建议（总结）</h2>
+
+<p>
+心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
+</p>
+
+
+<h2 id="toc_1.2">组织成员</h2>
 <table class='center'>
 <tr>
 <th>网名</th>
@@ -72,15 +77,16 @@
 <td>创始人</td>
 <td>组织框架搭建，前期内容建设，团队组建等</td>
 <td>shanghai</td>
-<td>angelife.t@gmail.com;angelife.foxmail.com</td>
+<td>邮件地址：angelife.t@gmail.com;QQ联系方式：154115835</td>
 </tr>
 </table>
 
-<h2 id="toc_1.2">成立组织的目的</h2>
+<h2 id="toc_1.3">成立组织的目的</h2>
 <p>
 成立组织的目的是为了建立一支能够在全国范围内协同作战的队伍，可以更有效的合作，将组织计划的任务一一落实。改变过去旧联盟一盘散沙、各自为政、要么哭哭闹闹、要么死气沉沉的面貌。对加入组织的人员做严格的甄别，以防别有用心、蓄意捣乱的人员混入组织，这些都是旧联盟存在的若干问题，面对的问题很严重，在没有外援的情况下，我们需要认真对待，保持警惕，能否解决问题主要还是靠我们每一个组员自身的素质。
-<h2 id="toc_1.3">组员守则</h2>
 </p>
+
+<h2 id="toc_1.4">组员守则</h2>
 <ul>
 <li>
 加入组织的成员需要注意，要严格按照组织的要求，定时定量的完成所交代的具体任务。
