--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
 加入组织的成员需要注意，要严格按照组织的要求，定时定量的完成所交代的具体任务。
 </li>
 </ul>
+<h2 id="toc_1.5">声明</h2>
+<ul>
+<li>
+目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
+</li>
+</ul>
+
 </div>
 <div id="footer">
     <p>&copy; 2011 心灵家园（退教心理咨询） &nbsp;&nbsp;<script language="javascript" src="http://count9.51yes.com/click.aspx?id=95484600&logo=1" charset="gb2312"></script>
