--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 <ul>
 <li><a href="#toc_1">TODO</a></li>
 <ul>
-<li><a href="#toc_1.1">组织成员</a></li>
-<li><a href="#toc_1.2">成立组织的目的</a></li>
-<li><a href="#toc_1.3">组员守则</a></li>
+<li><a href="#toc_1.1">退教基本建议</a></li>
+<li><a href="#toc_1.2">组织成员</a></li>
+<li><a href="#toc_1.3">成立组织的目的</a></li>
+<li><a href="#toc_1.4">组员守则</a></li>
+<li><a href="#toc_1.5">声明</a></li>
 </ul>
 </ul>
 </div>
