--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <ul>
 <li><a href="#toc_1.1">退教基本建议</a></li>
 <li><a href="#toc_1.2">组织成员</a></li>
-<li><a href="#toc_1.3">成立组织的目的</a></li>
-<li><a href="#toc_1.4">组员守则</a></li>
+<!--<li><a href="#toc_1.3">成立组织的目的</a></li>
+<li><a href="#toc_1.4">组员守则</a></li>-->
 <li><a href="#toc_1.5">声明</a></li>
 </ul>
 </ul>
@@ -82,7 +82,7 @@
 <td>邮件地址：angelife.t@gmail.com;QQ联系方式：154115835</td>
 </tr>
 </table>
-
+<!--
 <h2 id="toc_1.3">成立组织的目的</h2>
 <p>
 成立组织的目的是为了建立一支能够在全国范围内协同作战的队伍，可以更有效的合作，将组织计划的任务一一落实。改变过去旧联盟一盘散沙、各自为政、要么哭哭闹闹、要么死气沉沉的面貌。对加入组织的人员做严格的甄别，以防别有用心、蓄意捣乱的人员混入组织，这些都是旧联盟存在的若干问题，面对的问题很严重，在没有外援的情况下，我们需要认真对待，保持警惕，能否解决问题主要还是靠我们每一个组员自身的素质。
@@ -94,6 +94,8 @@
 加入组织的成员需要注意，要严格按照组织的要求，定时定量的完成所交代的具体任务。
 </li>
 </ul>
+
+-->
 <h2 id="toc_1.5">声明</h2>
 <ul>
 <li>
