--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li><a href="#toc_1">TODO</a></li>
 <ul>
 <li><a href="#toc_1.1">退教基本建议</a></li>
-<li><a href="#toc_1.2">组织成员</a></li>
+<li><a href="#toc_1.2">成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
 <li><a href="#toc_1.5">声明</a></li>
@@ -71,7 +71,7 @@
 </p>
 
 
-<h2 id="toc_1.2">组织成员</h2>
+<h2 id="toc_1.2">成员</h2>
 <table class='center'>
 <tr>
 <th>网名</th>
