--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <li><a href="#toc_1">TODO</a></li>
 <ul>
 <li><a href="#toc_1.1">退教基本建议</a></li>
-<li><a href="#toc_1.2">成员</a></li>
+<li><a href="#toc_1.2">咨询登记表</a></li>
+<li><a href="#toc_1.3">成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
 <li><a href="#toc_1.5">声明</a></li>
@@ -70,8 +71,14 @@
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
 </p>
 
+<h2 id="toc_1.2">咨询登记表</h2>
 
-<h2 id="toc_1.2">成员</h2>
+<p>
+<a href="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f
+">咨询登记表V0.32</a>
+</p>
+
+<h2 id="toc_1.3">成员</h2>
 <table class='center'>
 <tr>
 <th>网名</th>
