--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <li><a href="#toc_1">TODO</a></li>
 <ul>
 <li><a href="#toc_1.1">退教基本建议</a></li>
-<li><a href="#toc_1.2">咨询登记表</a></li>
-<li><a href="#toc_1.3">成员</a></li>
+<li><a href="#toc_1.2">登记表</a></li>
+<li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
 <li><a href="#toc_1.5">声明</a></li>
@@ -71,14 +71,20 @@
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
 </p>
 
-<h2 id="toc_1.2">咨询登记表</h2>
+<h2 id="toc_1.2">登记表</h2>
 
 <p>
+<ul>
+<li>
 <a href="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f
 ">咨询登记表V0.32</a>
+</li>
+<li>
+<a href="http://51qiangda.com/forms/4f2b8868b3e57c50080000a1">义工登记表</a>
+</li>
 </p>
 
-<h2 id="toc_1.3">成员</h2>
+<h2 id="toc_1.3">认证成员</h2>
 <table class='center'>
 <tr>
 <th>网名</th>
