--- a/anli/zongjie.html
+++ b/anli/zongjie.html
@@ -37,7 +37,7 @@
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
 </p>
 <p>
-需要更多帮助请加入退教咨询QQ群1.81184027
+需要更多帮助请加入退教咨询QQ群:  81184027
 </p>
 
 
