--- a/changshi/zongjie.html
+++ b/changshi/zongjie.html
@@ -30,6 +30,17 @@
 </div>
 <div id="cse"></div>
 <div id="main">
+
+<h2 id="toc_1.1">退教基本建议（总结）</h2>
+
+<p>
+心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
+</p>
+<p>
+需要更多帮助请加入退教咨询QQ群:  81184027
+</p>
+
+
 </div>
 <div id="footer">
     <p>&copy; 2011 心灵家园（退教心理咨询） &nbsp;&nbsp;<script language="javascript" src="http://count9.51yes.com/click.aspx?id=95484600&logo=1" charset="gb2312"></script>
