--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -202,7 +202,15 @@
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
 </p>
 <p>
+<h3 id="toc_5.1">注意事项：</h3>
+<ol>
+<li>
+请谨慎个人信息，以防邪教布局诈欺。
+</li>
+<li>
 需要更多帮助请加入退教咨询QQ群:  81184027
+</li>
+</ol>
 </p>
 	
 	
