--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -211,7 +211,7 @@
 需要更多帮助请加入退教咨询QQ群:  81184027
 </li>
 <li>
-目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
+目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義或反邪教名义的非正当筹款。谨防经济诈欺。
 </li>
 </ol>
 </p>
