--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -213,6 +213,9 @@
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義或反邪教名义的非正当筹款。谨防经济诈欺。
 </li>
+<li>
+为什么这里会有非目录条目：因为我发现很多浏览用户并没有翻阅到重点，错过真正重要的信息，而这个页面是大多数网友主要浏览的部分，所以我在这里增加了部分非目录条目，使有机会看到这个页面的网友也能获得基本上所需的信息。
+</li>
 </ol>
 </p>
 	
