--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -196,7 +196,7 @@
 </li>
 </ol>
 
-<h2 id="toc_5">重点：退教基本建议（总结）new （此部分更新于2013.3.14）</h2>
+<h2 id="toc_5">重点：退教基本建议（此部分更新于2013.3.14）</h2>
 
 <p>
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
@@ -205,7 +205,7 @@
 <h3 id="toc_5.1">注意事项：</h3>
 <ol>
 <li>
-请谨慎个人信息，以防邪教布局诈欺。
+请谨慎个人信息，以防邪教布局诈欺。慎重加入所谓反邪组织，防诈欺，防煽动，认真核查信息可靠性，信息来源，以防误导。
 </li>
 <li>
 需要更多帮助请加入退教咨询QQ群:  81184027
