--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -63,14 +63,18 @@
 <li>
 请谨慎个人信息，以防邪教布局诈欺。慎重加入所谓反邪组织，防诈欺，防煽动，认真核查信息可靠性，信息来源，以防误导。
 </li>
-<li>
-需要更多帮助请加入退教咨询QQ群:  81184027
-</li>
+
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義或反邪教名义的非正当筹款。谨防经济诈欺。
 </li>
 <li>
 为什么这里会有非目录条目：因为我发现很多浏览用户并没有翻阅到重点，错过真正重要的信息，而这个页面是大多数网友主要浏览的部分，所以我在这里增加了部分非目录条目，使有机会看到这个页面的网友也能获得基本上所需的信息。
+</li>
+<li>
+在个人经济允许的情况下，尽量找有资质的正规机构治疗咨询，可以最大程度的维护个人的合法权益，以免利益受损。如果受害者确实有精神方面的疾病，应该及时送入当地或正规的精神卫生中心治疗，以免延误病情造成更大的家庭悲剧。
+</li>
+<li>
+需要更多帮助请加入退教咨询QQ群:  81184027
 </li>
 </ol>
 </p>
