--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -52,7 +52,7 @@
 <p>
 <img src="./images/cover.jpg" />
 
-<h2 id="toc_5">退教基本建议（此部分更新于2013.3.14）</h2>
+<h2 id="toc_5">退教基本建议（此部分内容更新于2013.3.14）</h2>
 
 <p>
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
