--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -73,7 +73,7 @@
 </li>
 
 <li>
-在个人经济允许的情况下，尽量找有资质的正规机构治疗咨询，可以最大程度的保障个人的合法权益，以免利益受损。如果受害者确实有精神方面的疾病，应该及时送入当地或正规的精神卫生中心治疗，以免延误病情造成更大的家庭悲剧。
+在个人经济允许的情况下，尽量找有资质的正规机构治疗咨询，可以最大程度的保障个人的合法权益，以免利益受损。如果受害者确实有明显精神异常，或精神方面的疾病，应该及时送入当地或正规的精神卫生中心治疗，以免延误病情造成更大的家庭悲剧。
 </li>
 <li>
 需要更多帮助请加入退教咨询QQ群:  81184027
