--- a/东方闪电退教参考手册.html
+++ b/东方闪电退教参考手册.html
@@ -52,18 +52,17 @@
 <p>
 <img src="./images/cover.jpg" />
 
-<h2 id="toc_5">退教基本建议（此内容更新于2013.3.14）</h2>
+<h2 id="toc_5">前言</h2>
+
+
+<h3 id="toc_5.1">退教基本建议（此内容更新于2013.3.14）</h2>
 
 <p>
 心靈之光總結出5條退教基本建議：0.和則自癒; 1.不對立，多關心; 2.合理安排時間; 3.管好財物; 4.多讀書，讀好書; 5.養成好習慣，選擇積極正面的人生態度。希望對廣大受害者家屬有一定的幫助。
 </p>
 <p>
-<h3 id="toc_5.1">注意事项：</h3>
+<h4 id="toc_5.1.1">注意事项：</h3>
 <ol>
-<li>
-为什么要新增非目录条目？因为我从后台访问数据发现很多浏览用户并没有翻阅到手册的相应重点，错过真正重要有价值的信息，而这个页面是大多数网友主要浏览的部分，所以我在这里增加了部分非目录条目，使有机会看到这个页面的网友也能获得基本上所需的信息。
-</li>
-
 <li>
 请谨慎个人信息，以防邪教布局诈欺。慎重加入所谓反邪组织，防诈欺，防煽动，认真核查信息可靠性，信息来源，以防误导。
 </li>
