--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
 </ul>
 
 -->
+<h2 id="toc_1.4">识破全能神</h2>
+
+
+<iframe height=498 width=510 src="http://player.youku.com/embed/XNTI1NzY4MTA4" frameborder=0 allowfullscreen></iframe>
+
 <h2 id="toc_1.5">声明</h2>
 <ul>
 <li>
