--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 -->
 <h2 id="toc_1.4">识破全能神</h2>
 
-
+(感谢网友lee提供视频资料,此项内容更新于2013年4月22日)
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNTI1NzY4MTA4"  frameborder=0 allowfullscreen></iframe>
 
 <h2 id="toc_1.5">声明</h2>
