--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
 (感谢网友lee提供视频资料,此项内容更新于2013年4月22日)
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNTI1NzY4MTA4"  frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
-<h2 id="toc_1.5">声明</h2>
+<h2 id="toc_1.5">教主赵维山</h2>
+
+<iframe height=498 width=510 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen></iframe>
+<h2 id="toc_1.6">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
