--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <iframe height=498 width=510 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen></iframe>
 
-<h2 id="toc_1.6">声明</h2>
+<h2 id="toc_1.6">声明</h2></br>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
