--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
 </li>
+<li>
+请谨慎个人信息，以防邪教布局诈欺。慎重加入所谓反邪组织，防诈欺，防煽动，认真核查信息可靠性，信息来源，以防误导。
+</li>
+<li>
+在个人经济允许的情况下，尽量找有资质的正规机构治疗咨询，可以最大程度的保障个人的合法权益，以免利益受损。如果受害者确实有明显精神异常，或精神方面的疾病，应该及时送入当地或正规的精神卫生中心治疗，以免延误病情造成更大的家庭悲剧。
+</li>
+<li>
+需要更多帮助请加入退教咨询QQ群: 81184027
+</li>
 </ul>
 
 </div>
