--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <a href="http://51qiangda.com/forms/4f2b8868b3e57c50080000a1">义工登记表</a>
 </li>
 <li>
-<a href="http://ask.fm/angelifet">在线问答（新增 2013.11.26）</a>
+<a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
 </li>
 </ul>
 
