--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 <ul>
 <li><input type="checkbox" />
-<a href="东方闪电退教参考手册.html">退教参考手册</a>
+<a href="东方闪电退教参考手册.html">退教参考手册 第1版</a>
 </li>
 <li><input type="checkbox" />
-退教参考手册第2版（正在编写中...）
+退教参考手册 第2版（正在编写中...）
 </li>
 <li><input type="checkbox" />
 <a href="咨询服务须知.html">咨询服务须知</a>
