--- a/index.html
+++ b/index.html
@@ -137,7 +137,22 @@
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNjI3NDEwNjUy" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
-<h2 id="toc_1.6">声明</h2>
+<h2 id="toc_1.6">Google群组（墙外）创于09年</h2>
+<iframe id="forum_embed"
+  src="javascript:void(0)"
+  scrolling="no"
+  frameborder="0"
+  width="900"
+  height="700">
+</iframe>
+<script type="text/javascript">
+  document.getElementById('forum_embed').src =
+     'https://groups.google.com/forum/embed/?place=forum/angelife'
+     + '&showsearch=true&showpopout=true&showtabs=false'
+     + '&parenturl=' + encodeURIComponent(window.location.href);
+</script> 
+
+<h2 id="toc_1.7">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
