--- a/index.html
+++ b/index.html
@@ -151,7 +151,20 @@
      + '&showsearch=true&showpopout=true&showtabs=false'
      + '&parenturl=' + encodeURIComponent(window.location.href);
 </script> 
-
+<ul>
+<li>
+要在此论坛中发帖，请发送电子邮件至 angelife@googlegroups.com
+</li>
+<li>
+要取消订阅此论坛，请发送电子邮件至 angelife+unsubscribe@googlegroups.com
+</li>
+<li>
+要查看更多选项，请访问：https://groups.google.com/d/forum/angelife
+</li>
+<li>
+要查看更多选项，请访问：https://groups.google.com/groups/opt_out
+</li>
+</ul>
 <h2 id="toc_1.7">声明</h2>
 <ul>
 <li>
