--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
 要在此论坛中发帖，请发送电子邮件至 angelife@googlegroups.com
 </li>
 <li>
+要订阅此论坛，请发送电子邮件至 angelife+subscribe@googlegroups.com ，主题任意，即可。（境内网友）
+</li>
+<li>
 要取消订阅此论坛，请发送电子邮件至 angelife+unsubscribe@googlegroups.com
 </li>
 <li>
