--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
 <iframe height=498 width=810 src="http://player.youku.com/embed/XNjI3NDEwNjUy" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
-<h2 id="toc_1.6">Google群组（墙外）创于09年</h2>
+<h2 id="toc_1.6">Google群组（墙外）创于09年，2013年12月01日重新启用</h2>
 <iframe id="forum_embed"
   src="javascript:void(0)"
   scrolling="no"
