--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <ul>
 <li>
 <a href="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f
-">咨询登记表V0.33</a>
+">咨询登记表V0.34 Beta版</a>
 </li>
 <li>
 <a href="http://51qiangda.com/forms/4f2b8868b3e57c50080000a1">义工登记表</a>
@@ -129,14 +129,14 @@
 
 (感谢网友lee提供视频资料,此项内容更新于2013年4月22日)
 
-<iframe height=498 width=810 src="http://player.youku.com/embed/XNTI1NzY4MTA4"  frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+<iframe height=498 width=900 src="http://player.youku.com/embed/XNTI1NzY4MTA4"  frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
 <h2 id="toc_1.5">教主赵维山</h2>
 (此项内容更新于2013年10月21日)<br>
 
-<iframe height=498 width=810 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+<iframe height=498 width=900 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
-<iframe height=498 width=810 src="http://player.youku.com/embed/XNjI3NDEwNjUy" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+<iframe height=498 width=900 src="http://player.youku.com/embed/XNjI3NDEwNjUy" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 <h2 id="toc_1.6">Google群组（墙外）创于09年，2013年12月01日重新启用</h2>
 <iframe id="forum_embed"
   src="javascript:void(0)"
