--- a/index.html
+++ b/index.html
@@ -82,12 +82,19 @@
 <a href="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f
 ">咨询登记表V0.34 Beta版</a>
 </li>
+<a href="https://docs.google.com/spreadsheet/viewform?usp=drive_web&formkey=cFN2RVhrN2tWLUFidkllQzR4UXZYQnc6MA..#gid=0
+">咨询登记表（09墙外版）</a>
+
 <li>
 <a href="http://51qiangda.com/forms/4f2b8868b3e57c50080000a1">义工登记表</a>
 </li>
 <li>
 <a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
 </li>
+<li>
+<a href="http://code.google.com/p/angelife/">退教参考电子手册</a>
+</li>
+
 </ul>
 
 
