--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
 <th>负责范围</th>
 <th>所在城市</th>
 <th>e-mail</th>
+<th>QQ联系方式</th>
 </tr>
 <tr>
 <td>心灵之光</td>
 <td>创始人</td>
 <td>组织框架搭建，前期内容建设，团队组建等</td>
 <td>shanghai</td>
-<td>邮件地址：angelife.t@gmail.com;QQ联系方式：154115835</td>
+<td>邮件地址：angelife.t@gmail.com</td>
+<td>154115835</td>
 </tr>
 </table>
 <!--
