--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <td>创始人</td>
 <td>组织框架搭建，前期内容建设，团队组建等</td>
 <td>shanghai</td>
-<td>邮件地址：angelife.t@gmail.com</td>
+<td>angelife.t@gmail.com</td>
 <td>154115835</td>
 </tr>
 </table>
