--- a/封面.html
+++ b/封面.html
@@ -31,7 +31,7 @@
 <div id="cse"></div>
 <div id="main">
 <p>
-<img src="./images/cover.jpg" />
+<img class="displayed" src="./images/cover.jpg">
 </p>
 </div>
 <div id="footer">
