--- a/封面.html
+++ b/封面.html
@@ -31,7 +31,7 @@
 <div id="cse"></div>
 <div id="main">
 <p>
-<img class="displayed" src="./images/cover.jpg">
+<a href="东方闪电退教参考手册.html"><img class="displayed" src="./images/cover.jpg"></a>
 </p>
 </div>
 <div id="footer">
