--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 <ul>
 <li><a href="#toc_1">TODO</a></li>
 <ul>
+<li><a href="#toc_1.0">退教咨询计划（09版）</a></li>
 <li><a href="#toc_1.1">退教基本建议</a></li>
 <li><a href="#toc_1.2">登记表</a></li>
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.5">声明</a></li>
+<li><a href="#toc_1.7">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -61,6 +62,13 @@
 <a href="参考书籍.html">参考书籍</a>
 </li>
 </ul>
+
+<h2 id="toc_1.0">退教咨询计划（09版）</h2>
+
+<p>
+<img src="./images/plan.jpeg" alt="" style="width:850px; height: 620px;" />
+</p>
+
 
 <h2>致访者</h2>
 
