--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.7">声明</a></li>
+<li><a href="#toc_1.8">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -169,6 +169,10 @@
      + '&showsearch=true&showpopout=true&showtabs=false'
      + '&parenturl=' + encodeURIComponent(window.location.href);
 </script> 
+
+<h2 id="toc_1.7">邪教对家庭社会的伤害（09墙外版）</h2>
+<iframe width='900' height='1200' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0ApAX30iu0UPvdFJiT1ZHbEJUQXp0NERkRFN4MVljUEE&single=true&gid=0&output=html&widget=true'></iframe>
+
 <ul>
 <li>
 要在此论坛中发帖，请发送电子邮件至 angelife@googlegroups.com
@@ -198,7 +202,7 @@
 在个人经济允许的情况下，尽量找有资质的正规机构治疗咨询，可以最大程度的保障个人的合法权益，以免利益受损。如果受害者确实有明显精神异常，或精神方面的疾病，应该及时送入当地或正规的精神卫生中心治疗，以免延误病情造成更大的家庭悲剧。
 </li>
 <li>
-需要更多帮助请加入退教咨询QQ群: 81184027
+部分内容需要在翻墙状态下正常显示，网页在非ie浏览器（推荐采用chrome和firefox浏览器浏览本站）下会有更好显示效果，需要更多帮助请加入退教咨询QQ群: 81184027
 </li>
 </ul>
 
