--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 <li><input type="checkbox" />
 <a href="参考书籍.html">参考书籍</a>
 </li>
+
+<li>
+<input type="checkbox" /><a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
+</li>
+<li>
+<input type="checkbox" /><a href="http://code.google.com/p/angelife/">退教参考电子手册</a>
+</li>
 </ul>
 
 <h2 id="toc_1.0">退教咨询计划（09版）</h2>
@@ -97,12 +104,7 @@
 <li>
 <a href="http://51qiangda.com/forms/4f2b8868b3e57c50080000a1">义工登记表</a>
 </li>
-<li>
-<a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
-</li>
-<li>
-<a href="http://code.google.com/p/angelife/">退教参考电子手册</a>
-</li>
+
 
 </ul>
 
