--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
 </li>
 
 <li>
-<input type="checkbox" /><a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
+<input type="checkbox" />
+<a href="http://ask.fm/angelifet">在线答疑（新增 2013.11.26）</a>
 </li>
 <li>
-<input type="checkbox" /><a href="http://code.google.com/p/angelife/">退教参考电子手册</a>
+<input type="checkbox" />
+<a href="http://code.google.com/p/angelife/">退教参考电子手册</a>
 </li>
 </ul>
 
