--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.8">声明</a></li>
+<li><a href="#toc_1.9">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -196,7 +196,13 @@
 <h2 id="toc_1.7">邪教对家庭社会的伤害（09墙外版）</h2>
 <iframe width='900' height='1200' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0ApAX30iu0UPvdFJiT1ZHbEJUQXp0NERkRFN4MVljUEE&single=true&gid=0&output=html&widget=true'></iframe>
 
-<h2 id="toc_1.8">声明</h2>
+<h2 id="toc_1.8">本站从建立起至2013年12月03日大致访客流量分布图</h2>
+
+<p>
+<img src="http://angelife4github.u.qiniudn.com/2013-12-03-112109_1200x1920_scrot.png" alt=""  />
+</p>
+
+<h2 id="toc_1.9">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
