--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.9">声明</a></li>
+<li><a href="#toc_1.10">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -202,7 +202,11 @@
 <img src="http://angelife4github.u.qiniudn.com/2013-12-03-112109_1200x1920_scrot.png" alt=""  />
 </p>
 
-<h2 id="toc_1.9">声明</h2>
+<h2 id="toc_1.9">退教参考手册（墙外幻灯版）</h2>
+
+<iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="576" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<h2 id="toc_1.10">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
