--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 <h2 id="toc_1.9">退教参考手册（墙外幻灯版）</h2>
 
-<iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="576" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="900"  scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <h2 id="toc_1.10">声明</h2>
 <ul>
