--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
 </p>
 
 <h2 id="toc_1.9">退教参考手册（墙外幻灯版）</h2>
-
-<iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="900"  scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <h2 id="toc_1.10">声明</h2>
 <ul>
