--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.10">声明</a></li>
+<li><a href="#toc_1.11">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -205,7 +205,11 @@
 <h2 id="toc_1.9">退教参考手册（墙外幻灯版）</h2>
 <iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<h2 id="toc_1.10">声明</h2>
+<h2 id="toc_1.10">退教咨询IRC 2013年12月09 试运行</h2>
+<iframe src="http://chat.efnet.org:9090/?randomnick=1&channels=%23angelife" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+
+<h2 id="toc_1.11">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
