--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.11">声明</a></li>
+<li><a href="#toc_1.12">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -209,7 +209,10 @@
 <iframe src="http://chat.efnet.org:9090/?randomnick=1&channels=%23angelife" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 
-<h2 id="toc_1.11">声明</h2>
+<h2 id="toc_1.11">退教咨询登记表</h2>
+<iframe src="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f" width="900" height="1656" scrolling="yes" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+<h2 id="toc_1.12">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
