--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li><a href="#toc_1.3">认证成员</a></li>
 <!--<li><a href="#toc_1.3">成立组织的目的</a></li>
 <li><a href="#toc_1.4">组员守则</a></li>-->
-<li><a href="#toc_1.12">声明</a></li>
+<li><a href="#toc_1.13">声明</a></li>
 </ul>
 </ul>
 </div>
@@ -159,7 +159,14 @@
 <iframe height=498 width=900 src="http://player.youku.com/embed/XNjEzMDUyNzM2" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
 <iframe height=498 width=900 src="http://player.youku.com/embed/XNjI3NDEwNjUy" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
-<h2 id="toc_1.6">Google群组（墙外）创于09年，2013年12月01日重新启用</h2>
+
+<h2 id="toc_1.6">受害者自述</h2>
+(此项内容更新于2013年12月14日)<br>
+
+<iframe height=498 width=900 src="http://player.youku.com/embed/XNjQ4MjAwNjQw" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+
+<iframe height=498 width=900 src="http://player.youku.com/embed/XNjQ4MjAyODQ0" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+<h2 id="toc_1.7">Google群组（墙外）创于09年，2013年12月01日重新启用</h2>
 <iframe id="forum_embed"
   src="javascript:void(0)"
   scrolling="no"
@@ -193,26 +200,26 @@
 </li>
 </ul>
 
-<h2 id="toc_1.7">邪教对家庭社会的伤害（09墙外版）</h2>
+<h2 id="toc_1.8">邪教对家庭社会的伤害（09墙外版）</h2>
 <iframe width='900' height='1200' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0ApAX30iu0UPvdFJiT1ZHbEJUQXp0NERkRFN4MVljUEE&single=true&gid=0&output=html&widget=true'></iframe>
 
-<h2 id="toc_1.8">本站从建立起至2013年12月03日大致访客流量分布图</h2>
+<h2 id="toc_1.9">本站从建立起至2013年12月03日大致访客流量分布图</h2>
 
 <p>
 <img src="http://angelife4github.u.qiniudn.com/2013-12-03-112109_1200x1920_scrot.png" alt=""  />
 </p>
 
-<h2 id="toc_1.9">退教参考手册（墙外幻灯版）</h2>
+<h2 id="toc_1.10">退教参考手册（墙外幻灯版）</h2>
 <iframe src="//slid.es/anglifetse/angelife/embed?style=light" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<h2 id="toc_1.10">退教咨询IRC 2013年12月09 试运行</h2>
+<h2 id="toc_1.11">退教咨询IRC 2013年12月09 试运行</h2>
 <iframe src="http://chat.efnet.org:9090/?randomnick=1&channels=%23angelife" width="900" height="656" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 
-<h2 id="toc_1.11">退教咨询登记表</h2>
+<h2 id="toc_1.12">退教咨询登记表</h2>
 <iframe src="http://51qiangda.com/forms/4f277c95b3e57c3faa00002f" width="900" height="1656" scrolling="yes" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<h2 id="toc_1.12">声明</h2>
+<h2 id="toc_1.13">声明</h2>
 <ul>
 <li>
 目前本網站暫時不需要任何資金上的支持，一切諮詢皆免費支持，希望大家謹防以本網站名義對外的一切經濟事務。
