--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 <li><a href="#toc_1.1">退教基本建议</a></li>
 <li><a href="#toc_1.2">登记表</a></li>
 <li><a href="#toc_1.3">认证成员</a></li>
-<!--<li><a href="#toc_1.3">成立组织的目的</a></li>
-<li><a href="#toc_1.4">组员守则</a></li>-->
+<li><a href="#toc_1.4">识破全能神</a></li>
+<li><a href="#toc_1.5">教主赵维山</a></li>
+<li><a href="#toc_1.6">受害者自述</a></li>
 <li><a href="#toc_1.13">声明</a></li>
 </ul>
 </ul>
