--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>东方闪电退教咨询</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="Stylesheet" type="text/css" href="style.css" />
 <script>var root_path = '';</script>
@@ -21,7 +21,19 @@
 		</li>
 	</ul>
 </div>
-<div id="cse"></div>
+<div id="cse"><script>
+  (function() {
+    var cx = '011640667074148263772:bnpyqczbu8w';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search></div>
 <div id="main">
 <h1 id="toc_1">TODO</h1>
 <div class="toc">
