--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
 <iframe height=498 width=900 src="http://player.youku.com/embed/XNjQ4MjAwNjQw" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
 
 <iframe height=498 width=900 src="http://player.youku.com/embed/XNjQ4MjAyODQ0" frameborder=0 allowfullscreen style=”display:block;margin:0 auto”></iframe>
+
+<iframe width="960" height="720" src="//www.youtube-nocookie.com/embed/EqjjwO2afDs" frameborder="0" allowfullscreen></iframe>
+
 <h2 id="toc_1.7">Google群组（墙外）创于09年，2013年12月01日重新启用</h2>
 <iframe id="forum_embed"
   src="javascript:void(0)"
