--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <a href="封面.html">退教参考手册 第1版</a>
 </li>
 <li><input type="checkbox" />
-退教参考手册 第2版
+<a href="http://blog.angelife.org">退教参考手册 第2版</a>
 </li>
 <li><input type="checkbox" />
 <a href="咨询服务须知.html">咨询服务须知</a>
