--- a/咨询服务须知.html
+++ b/咨询服务须知.html
@@ -122,6 +122,8 @@ MBTI-M人格类型量表： <a href="http://types.yuzeli.com/survey/MBTI/">http:
 <ol>
 <li>
 九型人格测试（180题）<a href="http://types.yuzeli.com/survey/nine180/">http://types.yuzeli.com/survey/nine180/</a>
+
+九型人格测试 <a href="http://www.apesk.com/ninehouse/">http://www.apesk.com/ninehouse/</a>
 </li>
 </ol>
 <li>
