--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
 </div>
 <div id="footer">
     <p>&copy; 2011 心灵家园（退教心理咨询） &nbsp;&nbsp;<script language="javascript" src="http://count9.51yes.com/click.aspx?id=95484600&logo=1" charset="gb2312"></script>
+
+	<a href="http://webscan.360.cn/index/checkwebsite/url/angelife.org"><img border="0" src="http://img.webscan.360.cn/status/pai/hash/6c63531efec3da080df611f922c3b97f"/></a>
 </p>
 </div>
 </div>
